--- a/NodeJS/app/views/noticias/noticias.ejs
+++ b/NodeJS/app/views/noticias/noticias.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
+<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
 			<title>Notícias</title>
@@ -7,6 +7,22 @@
 	<body>
 
 		<h1>Notícias</h1>
+
+		<table>
+			<tr>
+				<td>ID</td>
+				<td>Titulo</td>
+				<td>Noticia</td>
+			</tr>
+
+			<% for(var i=0; i < noticias.length; i++) { %>
+				<tr>
+					<td><%= noticias[i].id_noticia %></td>
+					<td><%= noticias[i].titulo %></td>
+					<td><%= noticias[i].noticia %></td>
+				</tr>
+			<% } %>
+		</table>
 
 	</body>
 </html>
